--- a/hafta8.html
+++ b/hafta8.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Animated Circles</title>
+<title>Talking Circles</title>
 <style>
   /* Ortaya hizalama için */
   body {
@@ -21,8 +21,62 @@
     height: 100px;
     border-radius: 50%;
     background-color: purple;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
+  }
+
+  /* Gözler */
+  .eye {
+    width: 10px;
+    height: 10px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+    top: 30px;
+  }
+
+  .eye.left { left: 30px; }
+  .eye.right { right: 30px; }
+
+  /* Burun */
+  .nose {
+    width: 8px;
+    height: 5px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+    top: 45px;
+  }
+
+  /* Kulaklar */
+  .ear {
+    width: 15px;
+    height: 15px;
+    background-color: #999;
+    border-radius: 50%;
+    position: absolute;
+  }
+
+  .ear.left { left: -10px; top: 35px; }
+  .ear.right { right: -10px; top: 35px; }
+
+  /* Ağız */
+  .mouth {
+    width: 20px;
+    height: 10px;
+    background-color: black;
+    border-radius: 0 0 10px 10px;
+    position: absolute;
+    top: 60px;
+    animation: talk 0.5s ease-in-out infinite;
+  }
+
+  /* Konuşma animasyonu */
+  @keyframes talk {
+    0%, 100% { height: 5px; }
+    50% { height: 15px; }
   }
 
   /* Yukarı-aşağı hareket eden */
@@ -83,12 +137,16 @@
 </head>
 <body>
 
-<div class="circle up-down"></div>
-<div class="circle grow-shrink"></div>
-<div class="circle fade"></div>
-<div class="circle left-right"></div>
-<div class="circle rotate"></div>
+<div class="circle up-down">
+  <div class="eye left"></div>
+  <div class="eye right"></div>
+  <div class="nose"></div>
+  <div class="ear left"></div>
+  <div class="ear right"></div>
+  <div class="mouth"></div>
+</div>
 
-</body>
-</html>
-
+<div class="circle grow-shrink">
+  <div class="eye left"></div>
+  <div class="eye right"></div>
+  <div class="nose"></div
