--- a/hafta8.html
+++ b/hafta8.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Talking Circles</title>
+<title>Tatlı Yüzler</title>
 <style>
   /* Ortaya hizalama için */
   body {
