--- a/hafta8.html
+++ b/hafta8.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tatlı Yüzler</title>
+<title>Talking Circles with Animations</title>
 <style>
   /* Ortaya hizalama için */
   body {
@@ -22,125 +22,4 @@
     border-radius: 50%;
     display: flex;
     justify-content: center;
-    align-items: center;
-    position: relative;
-    background-color: #ffcccb;
-  }
-
-  /* Gözler */
-  .eye {
-    width: 10px;
-    height: 10px;
-    background-color: black;
-    border-radius: 50%;
-    position: absolute;
-    top: 30px;
-  }
-  .eye.left { left: 30px; }
-  .eye.right { right: 30px; }
-
-  /* Burun */
-  .nose {
-    width: 8px;
-    height: 5px;
-    background-color: black;
-    border-radius: 50%;
-    position: absolute;
-    top: 45px;
-  }
-
-  /* Ağız */
-  .mouth {
-    position: absolute;
-    top: 60px;
-    width: 20px;
-    height: 10px;
-    background-color: black;
-    border-radius: 50%;
-  }
-
-  /* Ağlayan ağız ve gözyaşları */
-  .crying .mouth {
-    border-radius: 0 0 10px 10px;
-    height: 5px;
-    background-color: black;
-  }
-
-  .tear {
-    width: 5px;
-    height: 10px;
-    background-color: lightblue;
-    position: absolute;
-    top: 45px;
-    border-radius: 50%;
-    animation: tearDrop 1s infinite;
-  }
-  .tear.left { left: 25px; }
-  .tear.right { right: 25px; animation-delay: 0.5s; }
-
-  @keyframes tearDrop {
-    0% { top: 45px; opacity: 1; }
-    100% { top: 70px; opacity: 0; }
-  }
-
-  /* Kahkaha atan ağız */
-  .laughing .mouth {
-    width: 30px;
-    height: 20px;
-    border-radius: 50%;
-    top: 55px;
-  }
-
-  /* Korkan ağız */
-  .scared .mouth {
-    width: 10px;
-    height: 20px;
-    background-color: black;
-    top: 55px;
-  }
-
-  /* Gülümseyen ağız */
-  .smiling .mouth {
-    border-radius: 0 0 10px 10px;
-    height: 5px;
-  }
-</style>
-</head>
-<body>
-
-<!-- Ağlayan Daire -->
-<div class="circle crying">
-  <div class="eye left"></div>
-  <div class="eye right"></div>
-  <div class="nose"></div>
-  <div class="mouth"></div>
-  <div class="tear left"></div>
-  <div class="tear right"></div>
-</div>
-
-<!-- Kahkaha Atan Daire -->
-<div class="circle laughing">
-  <div class="eye left"></div>
-  <div class="eye right"></div>
-  <div class="nose"></div>
-  <div class="mouth"></div>
-</div>
-
-<!-- Korkan Daire -->
-<div class="circle scared">
-  <div class="eye left"></div>
-  <div class="eye right"></div>
-  <div class="nose"></div>
-  <div class="mouth"></div>
-</div>
-
-<!-- Gülümseyen Daire -->
-<div class="circle smiling">
-  <div class="eye left"></div>
-  <div class="eye right"></div>
-  <div class="nose"></div>
-  <div class="mouth"></div>
-</div>
-
-</body>
-</html>
+    align-items: ce
