--- a/hafta8.html
+++ b/hafta8.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Talking Circles with Animations</title>
+<title>Tatlı Yüzler</title>
 <style>
   /* Ortaya hizalama için */
   body {
@@ -20,6 +20,74 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: ce
+    background-color: purple;
+    display: inline-block;
+    position: relative;
+  }
+
+  /* Yukarı-aşağı hareket eden */
+  .up-down {
+    animation: upDown 2s ease-in-out infinite;
+    background-color: #6a0dad;
+  }
+
+  @keyframes upDown {
+    0%, 100% { top: 0; }
+    50% { top: 20px; }
+  }
+
+  /* Büyüyüp küçülen ve rengi değişen */
+  .grow-shrink {
+    animation: growShrink 2s ease-in-out infinite;
+    background-color: #ff6347;
+  }
+
+  @keyframes growShrink {
+    0%, 100% { transform: scale(1); background-color: #ff6347; }
+    50% { transform: scale(1.3); background-color: #ff4500; }
+  }
+
+  /* Transparanlık artan ve azalan */
+  .fade {
+    animation: fadeInOut 2s ease-in-out infinite;
+    background-color: #e75480;
+  }
+
+  @keyframes fadeInOut {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0.5; }
+  }
+
+  /* Sağa sola hareket eden */
+  .left-right {
+    animation: leftRight 2s ease-in-out infinite;
+    background-color: #4682b4;
+  }
+
+  @keyframes leftRight {
+    0%, 100% { left: 0; }
+    50% { left: 20px; }
+  }
+
+  /* Dönen */
+  .rotate {
+    animation: rotation 2s linear infinite;
+    background-color: #1e90ff;
+  }
+
+  @keyframes rotation {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+</style>
+</head>
+<body>
+
+<div class="circle up-down"></div>
+<div class="circle grow-shrink"></div>
+<div class="circle fade"></div>
+<div class="circle left-right"></div>
+<div class="circle rotate"></div>
+
+</body>
+</html>
