--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
 <a href="hafta7.html">  Hafta 7 ödevi</a> 
 
-<a href="hafta8.html">  Hafta 8 ödevi</a>
+<a href="hafta8.html">  Hafta 8-1 ödevi</a>
+
+<a href="hafta8.html">  Hafta 8-2 ödevi</a>
 </body>
