--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <a href="hafta7.html">  Hafta 7 ödevi</a> 
 
-<a href="hafta8-1.html">  Hafta 8-1 ödevi</a>
+<a href="hafta8_1.html">  Hafta 8-1 ödevi</a>
 
-<a href="hafta8-2.html">  Hafta 8-2 ödevi</a>
+<a href="hafta8_2.html">  Hafta 8-2 ödevi</a>
 </body>
