--- a/hafta8_2.html
+++ b/hafta8_2.html
@@ -1,54 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hafta 8 Ödevi</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
- 
-<div class="container-fluid">
-<div class="row">
- 
-  <div class="card col-md-4 col-lg-2">
-    <div class="card-header">Header</div>
-    <div class="card-body">Content</div> 
-    <div class="card-footer">Footer</div>
-  </div>
-   <div class="card col-md-4 col-lg-2">
-    <div class="card-header">Header</div>
-    <div class="card-body">Content</div> 
-    <div class="card-footer">Footer</div>
-  </div>
-   <div class="card col-md-4 col-lg-2">
-    <div class="card-header">Header</div>
-    <div class="card-body">Content</div> 
-    <div class="card-footer">Footer</div>
-  </div>
-   <div class="card col-md-4 col-lg-2">
-    <div class="card-header">Header</div>
-    <div class="card-body">Content</div> 
-    <div class="card-footer">Footer</div>
-  </div>
-
-    <div class="card col-md-4 col-lg-2">
-    <div class="card-header">Header</div>
-    <div class="card-body">Content</div> 
-    <div class="card-footer">Footer</div>
-  </div>
- 
-    <div class="card col-md-4 col-lg-2">
-    <div class="card-header">Header</div>
-    <div class="card-body">Content</div> 
-    <div class="card-footer">Footer</div>
-  </div>
-  </div>
-</div>
-
+    <div class="container my-4">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-6 g-4">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Kart 1</h5>
+                        <p class="card-text">Kart 1 İçeriği</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Kart 2</h5>
+                        <p class="card-text">Kart 2 İçeriği</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Kart 3</h5>
+                        <p class="card-text">Kart 3 İçeriği</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Kart 4</h5>
+                        <p class="card-text">Kart 4 İçeriği</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Kart 5</h5>
+                        <p class="card-text">Kart 5 İçeriği</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Kart 6</h5>
+                        <p class="card-text">Kart 6 İçeriği</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
