--- a/hafta8_2.html
+++ b/hafta8_2.html
@@ -12,48 +12,48 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Kart 1</h5>
-                        <p class="card-text">Kart 1 İçeriği</p>
+                        <h5 class="card-title">1. Kart</h5>
+                        <p class="card-text">HTML</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Kart 2</h5>
-                        <p class="card-text">Kart 2 İçeriği</p>
+                        <h5 class="card-title">2. Kart</h5>
+                        <p class="card-text">CSS</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Kart 3</h5>
-                        <p class="card-text">Kart 3 İçeriği</p>
+                        <h5 class="card-title">3. Kart</h5>
+                        <p class="card-text">JavaScript</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Kart 4</h5>
-                        <p class="card-text">Kart 4 İçeriği</p>
+                        <h5 class="card-title">4. Kart</h5>
+                        <p class="card-text">React</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Kart 5</h5>
-                        <p class="card-text">Kart 5 İçeriği</p>
+                        <h5 class="card-title">5. Kart</h5>
+                        <p class="card-text">Node</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Kart 6</h5>
-                        <p class="card-text">Kart 6 İçeriği</p>
+                        <h5 class="card-title">6. Kart</h5>
+                        <p class="card-text">Git</p>
                     </div>
                 </div>
             </div>
