--- a/hafta8_2.html
+++ b/hafta8_2.html
@@ -12,7 +12,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">1. Kart</h5>
+                        <h5 class="card-title">1. Ders</h5>
                         <p class="card-text">HTML</p>
                     </div>
                 </div>
@@ -20,7 +20,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">2. Kart</h5>
+                        <h5 class="card-title">2. Ders</h5>
                         <p class="card-text">CSS</p>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">3. Kart</h5>
+                        <h5 class="card-title">3. Ders</h5>
                         <p class="card-text">JavaScript</p>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">4. Kart</h5>
+                        <h5 class="card-title">4. Ders</h5>
                         <p class="card-text">React</p>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">5. Kart</h5>
+                        <h5 class="card-title">5. Ders</h5>
                         <p class="card-text">Node</p>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">6. Kart</h5>
+                        <h5 class="card-title">6. Ders</h5>
                         <p class="card-text">Git</p>
                     </div>
                 </div>
