--- a/hafta8_2.html
+++ b/hafta8_2.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container my-4">
+        <h1 class="text-center mb-4">Web Geliştirme Dersleri</h1>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-6 g-4">
             <div class="col">
                 <div class="card">
