--- a/hafta7.html
+++ b/hafta7.html
@@ -154,7 +154,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#flex-box">Flexbox</a></li>
+            <li><a href="#flex-box">Flex Kutusu</a></li>
         </ul>
     </nav>
 
