--- a/hafta7.html
+++ b/hafta7.html
@@ -161,19 +161,19 @@
     <div class="container" id="flex-box">
         <div class="grid-container">
             <div class="row">
-                <div class="box box-a">A</div>
+                <div class="box box-a">Adana</div>
             </div>
             <div class="row">
-                <div class="box box-b">B</div>
-                <div class="box box-c">C</div>
-                <div class="box box-d">D</div>
+                <div class="box box-b">Bursa</div>
+                <div class="box box-c">Ceyhan</div>
+                <div class="box box-d">Denizli</div>
             </div>
             <div class="row">
-                <div class="box box-e">E</div>
-                <div class="box box-f">F</div>
+                <div class="box box-e">Edirne</div>
+                <div class="box box-f">Fatsa</div>
             </div>
             <div class="row">
-                <div class="box box-g">G</div>
+                <div class="box box-g">Giresun</div>
             </div>
         </div>
     </div>
