--- a/index.html
+++ b/index.html
@@ -1,15 +1,64 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ödevler</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .container {
+      text-align: center;
+      background-color: #fff;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+      max-width: 300px;
+      width: 100%;
+    }
+
+    h1 {
+      font-size: 1.5em;
+      color: #333;
+      margin-bottom: 20px;
+    }
+
+    a {
+      display: block;
+      text-decoration: none;
+      color: #0066cc;
+      font-weight: bold;
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 4px;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    a:hover {
+      background-color: #0066cc;
+      color: #fff;
+    }
+  </style>
+</head>
 <body>
-<a href="hafta2.html">  Hafta 2 ödevi</a>
-
-<a href="hafta3.html">  Hafta 3 ödevi</a> 
-
-<a href="hafta4.html">  Hafta 4 ödevi</a> 
-
-<a href="hafta5.html">  Hafta 5 ödevi</a> 
-
-<a href="hafta7.html">  Hafta 7 ödevi</a> 
-
-<a href="hafta8_1.html">  Hafta 8-1 ödevi</a>
-
-<a href="hafta8_2.html">  Hafta 8-2 ödevi</a>
+  <div class="container">
+    <h1>Ödev Listesi</h1>
+    <a href="hafta2.html">Hafta 2 Ödevi</a>
+    <a href="hafta3.html">Hafta 3 Ödevi</a>
+    <a href="hafta4.html">Hafta 4 Ödevi</a>
+    <a href="hafta5.html">Hafta 5 Ödevi</a>
+    <a href="hafta7.html">Hafta 7 Ödevi</a>
+    <a href="hafta8_1.html">Hafta 8-1 Ödevi</a>
+    <a href="hafta8_2.html">Hafta 8-2 Ödevi</a>
+  </div>
 </body>
+</html>
