--- a/hafta2.html
+++ b/hafta2.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <header>
-    <h1>Masal Ödevi</h1>
-    <p>Kaybolmuş Günün Melodisi</p>
+    <h1>Kaybolmuş Günün Melodisi</h1>
 </header>
 <nav>
     <ul>
