--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 <body>
   <div class="container">
     <h1>Ödev Listesi</h1>
-    <a href="hafta2.html">Hafta 2 Ödevi</a>
-    <a href="hafta3.html">Hafta 3 Ödevi</a>
-    <a href="hafta4.html">Hafta 4 Ödevi</a>
-    <a href="hafta5.html">Hafta 5 Ödevi</a>
-    <a href="hafta7.html">Hafta 6 Ödevi</a>
-    <a href="hafta8_1.html">Hafta 7-1 Ödevi</a>
-    <a href="hafta8_2.html">Hafta 7-2 Ödevi</a>
+    <a href="hafta2.html">Hafta 2</a>
+    <a href="hafta3.html">Hafta 3</a>
+    <a href="hafta4.html">Hafta 4</a>
+    <a href="hafta5.html">Hafta 5</a>
+    <a href="hafta6.html">Hafta 6</a>
+    <a href="hafta7_1.html">Hafta 7.1</a>
+    <a href="hafta7_2.html">Hafta 7.2</a>
   </div>
 </body>
 </html>
