--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Ödev Listesi</h1>
+    <h1>Web Dersi Ödevleri</h1>
     <a href="hafta2.html">Hafta 2</a>
     <a href="hafta3.html">Hafta 3</a>
     <a href="hafta4.html">Hafta 4</a>
