--- a/hafta2.html
+++ b/hafta2.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
     <meta charset="utf-8">
-    <title>Web Programlama Masal Ödevi</title>
+    <title>Hafta 1 - Masal</title>
 </head>
 <body>
 <header>
