--- a/hafta4.html
+++ b/hafta4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Üyelik Formu</title>
+    <title>Hafta 4 - Üyelik Formu ve Web Programcılığı Testi</title>
 </head>
 <body>
     <h2>Üyelik Formu</h2>
