--- a/hafta5.html
+++ b/hafta5.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Görev 1 ve Görev 2</title>
+<title> Hafta 5 - Ders Programı Tabloları ve Daireler</title>
 <link rel="stylesheet" href="styles.css"> <!-- External CSS için ayrı dosya bağlantısı -->
 <style>
 /* Görev 1 - 2. Kopya İçin Internal CSS */
