--- a/hafta6.html
+++ b/hafta6.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Grid Örneği</title>
+    <title>Hafta 6 - CSS Grid Örneği</title>
     <style>
         body {
             font-family: Arial, sans-serif;
