--- a/hafta7_1.html
+++ b/hafta7_1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tatlı Yüzler</title>
+<title>Hafta 7 - Tatlı Yüzler</title>
 <style> 
   /* Ortaya hizalama için */
   body {
