--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: #ffd1dc; /* Arka plan rengi açık pembe olarak değiştirildi */
       color: #333;
       display: flex;
       justify-content: center;
